test antes de intercambiar pageIndex por currentButton

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 			<div id="subVideo3" class="videoContainer"></div>
 			<div id="subVideo2" class="videoContainer"></div>
 			<div id="subVideo1" class="videoContainer"></div>
+			<div id="specificVideo" class="videoContainer"></div>
 			<div id="video3" class="videoContainer"></div>
 			<div id="video2" class="videoContainer"></div>
 			<div id="video1" class="videoContainer"></div>
