antes de instalar node en el proyecto y hacer imagenes

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			<div id="subVideo2" class="videoContainer"></div>
 			<div id="subVideo1" class="videoContainer"></div>
 			<div id="specificVideo" class="videoContainer"></div>
+			<div class="documentShowCase"></div>
 			<div id="video3" class="videoContainer"></div>
 			<div id="video2" class="videoContainer"></div>
 			<div id="video1" class="videoContainer"></div>
