inicio de imageModal

--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
 			<div id="subVideo2" class="videoContainer"></div>
 			<div id="subVideo1" class="videoContainer"></div>
 			<div id="specificVideo" class="videoContainer"></div>
-			<div class="documentShowCase"></div>
+			<div class="documentShowCase">
+				<div class="centerContainer">
+					<div class="textContainerImageModal">
+						<div class="imageModalContainer">
+							<div class="imageModal">asd</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
 			<div id="video3" class="videoContainer"></div>
 			<div id="video2" class="videoContainer"></div>
 			<div id="video1" class="videoContainer"></div>
@@ -235,6 +244,9 @@
 	</body>
 	<script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
 	<script src="https://scripts.sirv.com/sirv.js"></script>
-
+	<script
+		src="https://kit.fontawesome.com/c58ed27956.js"
+		crossorigin="anonymous"
+	></script>
 	<script src="./js/main.js"></script>
 </html>
