stable, a punto de hacer imagenes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,28 @@
 				<div class="centerContainer">
 					<div class="textContainerImageModal">
 						<div class="imageModalContainer">
-							<div class="imageModal">asd</div>
+							<div class="item imageLeftContainer">
+								<div class="xContainer">
+									<img class="imageX" src="assets/icons/x.png" alt="" />
+								</div>
+								<div class="leftArrowContainer">
+									<img class="leftArrow" src="assets/icons/left.png" alt="" />
+								</div>
+							</div>
+
+							<div class="item imageCenterContainer">2</div>
+							<div class="item imageRightContainer">
+								<div class="xContainer">
+									<img
+										class="brandIconImage"
+										src="assets/icons/onefiftyLogo.png"
+										alt=""
+									/>
+								</div>
+								<div class="rightArrowContainer">
+									<img class="rightArrow" src="assets/icons/right.png" alt="" />
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -244,9 +265,6 @@
 	</body>
 	<script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
 	<script src="https://scripts.sirv.com/sirv.js"></script>
-	<script
-		src="https://kit.fontawesome.com/c58ed27956.js"
-		crossorigin="anonymous"
-	></script>
-	<script src="./js/main.js"></script>
+
+	<script type="module" src="./js/main.js"></script>
 </html>
