cambio del vanish en transpolate video

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
 								</div>
 							</div>
 
-							<div class="item imageCenterContainer">2</div>
+							<div class="item imageCenterContainer">
+								<div class="imageShowedContainer"></div>
+							</div>
 							<div class="item imageRightContainer">
 								<div class="xContainer">
 									<img
@@ -266,5 +268,5 @@
 	<script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
 	<script src="https://scripts.sirv.com/sirv.js"></script>
 
-	<script type="module" src="./js/main.js"></script>
+	<script src="./js/main.js"></script>
 </html>
