--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
 							</div>
 
 							<div class="item imageCenterContainer">
-								<div class="imageShowedContainer"></div>
+								<div class="imageShowedContainer">
+									<div class="imageFiller"></div>
+									<div class="imageShowedHolder"></div>
+								</div>
 							</div>
 							<div class="item imageRightContainer">
 								<div class="xContainer">
@@ -268,5 +271,5 @@
 	<script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
 	<script src="https://scripts.sirv.com/sirv.js"></script>
 
-	<script src="./js/main.js"></script>
+	<script type="module" src="./js/main.js"></script>
 </html>
