--- a/index.html
+++ b/index.html
@@ -34,6 +34,39 @@
 		<div class="container">
 			<div id="subVideo3" class="videoContainer"></div>
 			<div id="subVideo2" class="videoContainer"></div>
+			<div class="videoContainer">
+				<video
+					id="subVideoFinish1"
+					src=""
+					loop=""
+					playsinline="playsinline"
+					autoplay=""
+					class="video"
+					style="opacity: 0"
+				></video>
+			</div>
+			<div class="videoContainer">
+				<video
+					id="subVideoFinish2"
+					src=""
+					loop=""
+					playsinline="playsinline"
+					autoplay=""
+					class="video"
+					style="opacity: 0"
+				></video>
+			</div>
+			<div class="videoContainer">
+				<video
+					id="subVideoFinish3"
+					src=""
+					loop=""
+					playsinline="playsinline"
+					autoplay=""
+					class="video"
+					style="opacity: 0"
+				></video>
+			</div>
 			<div id="subVideo1" class="videoContainer"></div>
 			<div id="specificVideo" class="videoContainer"></div>
 			<div class="documentShowCase">
@@ -148,13 +181,6 @@
 									class="iconImg"
 								/>
 							</button>
-							<!-- <button
-									id="viewR_button"
-									class="button mainMenuB"
-									style="right: 77%; top: 12%"
-								>
-									View 360 Rotation
-								</button> -->
 						</div>
 					</div>
 				</div>
@@ -271,5 +297,5 @@
 	<script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
 	<script src="https://scripts.sirv.com/sirv.js"></script>
 
-	<script type="module" src="./js/main.js"></script>
+	<script src="./js/main.js"></script>
 </html>
