frame hecho para pdf

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<div class="centerContainer">
 					<div class="textContainerImageModal">
 						<div class="imageModalContainer">
-							<div class="item imageLeftContainer">
+							<div class="imageLeftContainer">
 								<div class="xContainer">
 									<img class="imageX" src="assets/icons/x.png" alt="" />
 								</div>
@@ -81,14 +81,13 @@
 									<img class="leftArrow" src="assets/icons/left.png" alt="" />
 								</div>
 							</div>
-
-							<div class="item imageCenterContainer">
+							<div class="imageCenterContainer">
 								<div class="imageShowedContainer">
 									<div class="imageFiller"></div>
 									<div class="imageShowedHolder"></div>
 								</div>
 							</div>
-							<div class="item imageRightContainer">
+							<div class="imageRightContainer">
 								<div class="xContainer">
 									<img
 										class="brandIconImage"
@@ -100,6 +99,19 @@
 									<img class="rightArrow" src="assets/icons/right.png" alt="" />
 								</div>
 							</div>
+						</div>
+					</div>
+					<div class="textContainerSpecModal">
+						<div class="specModalContainer">
+							<div class="specTopContainer">
+								<img class="specX" src="assets/icons/x.png" alt="" />
+								<img
+									class="brandIconImage"
+									src="assets/icons/onefiftyLogo.png"
+									alt=""
+								/>
+							</div>
+							<div class="specCenterContainer"></div>
 						</div>
 					</div>
 				</div>
