empiezo de family button

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 			<div id="video3" class="videoContainer"></div>
 			<div id="video2" class="videoContainer"></div>
 			<div id="video1" class="videoContainer"></div>
+
 			<div id="loop" class="videoContainer">
 				<video
 					id="loopVideo"
@@ -291,6 +292,17 @@
 			</div>
 
 			<div id="showCont" class="showCont hidden short-vanish"></div>
+			<div class="exploreProContainer">
+				<div class="exploreProImgContainer">
+					<img
+						class="exploreProImg"
+						src="./assets/productFa/turnlock.png"
+						alt=""
+					/>
+				</div>
+
+				<div class="buttonRow"></div>
+			</div>
 			<div id="rotation" class="rotation hidden">
 				<div class="rotationContainer">
 					<img
