--- a/index.html
+++ b/index.html
@@ -310,11 +310,10 @@
 						class="reel"
 						id="product-reel"
 						data-responsive="true"
-						width="1000"
-						height="500"
 						data-images="./assets/lifelineSwing/threesixty/lifelineSwing_#.jpg|1..60"
 						data-frames="60"
 						data-footage="6"
+						cw="true"
 						data-revolution="800"
 					/>
 				</div>
