--- a/index.html
+++ b/index.html
@@ -179,43 +179,53 @@
 						<div class="threeButtons">
 							<div class="titulo">DATA CENTER</div>
 							<button class="button mainMenuB mainB" data-id="turnlock100">
-								<span>Turnlock 100</span>
-								<img
-									src="assets/icons/homeLifeline100.png"
-									alt=""
-									class="iconImg"
-								/>
+								<div class="textButtonContainer">
+									Turnlock 100
+									<img
+										src="assets/icons/homeLifeline100.png"
+										alt=""
+										class="iconImg"
+									/>
+								</div>
 							</button>
 							<button class="button mainMenuB mainB" data-id="tourlock180">
-								Tourlock 180
-								<img
-									src="assets/icons/homeTourlock180.png"
-									alt=""
-									class="iconImg"
-								/>
+								<div class="textButtonContainer">
+									Tourlock 180
+									<img
+										src="assets/icons/homeTourlock180.png"
+										alt=""
+										class="iconImg"
+									/>
+								</div>
 							</button>
 							<button class="button mainMenuB mainB" data-id="lifelineSwing">
-								Lifeline Swing
-								<img
-									src="assets/icons/homeLifelineSwing.png"
-									alt=""
-									class="iconImg"
-								/>
+								<div class="textButtonContainer">
+									Lifeline Swing
+									<img
+										src="assets/icons/homeLifelineSwing.png"
+										alt=""
+										class="iconImg"
+									/>
+								</div>
 							</button>
 							<button class="button mainMenuB mainB" data-id="circlelockSolo">
-								Circlelock Solo<img
-									src="assets/icons/homeCirclelockSolo.png"
-									alt=""
-									class="iconImg"
-								/>
+								<div class="textButtonContainer">
+									Circlelock Solo<img
+										src="assets/icons/homeCirclelockSolo.png"
+										alt=""
+										class="iconImg"
+									/>
+								</div>
 							</button>
 							<button class="button mainMenuB mainB" data-id="circlelockCombi">
-								Circlelock Combi
-								<img
-									src="assets/icons/homeCirclelockSolo.png"
-									alt=""
-									class="iconImg"
-								/>
+								<div class="textButtonContainer">
+									Circlelock Combi
+									<img
+										src="assets/icons/homeCirclelockSolo.png"
+										alt=""
+										class="iconImg"
+									/>
+								</div>
 							</button>
 						</div>
 					</div>
@@ -312,7 +322,6 @@
 						data-images="./assets/lifelineSwing/threesixty/lifelineSwing_#.jpg|1..60"
 						data-frames="60"
 						data-footage="6"
-						cw="true"
 						data-revolution="800"
 					/>
 				</div>
