--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 		window.jQuery ||
 			document.write('<script src="./js/jquery-3.7.1.min.js">\x3C/script>')
 	</script>
-	<script src="./js/jquery.reel.js"></script>
+	<script src="./js/jquery.reel.min.js" type="text/javascript"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
 	<script src="https://scripts.sirv.com/sirv.js"></script>
 	<script src="./js/pdfObj.js"></script>
